[Wen Hao] - parameterized topbar.

--- a/src/plugins/topbar/topbar.less
+++ b/src/plugins/topbar/topbar.less
@@ -50,4 +50,12 @@
     margin: 0 auto;
     width: 45em;
   }
+
+  .environment {
+    border: 2px solid #547f00!important;
+  }
+
+  .project {
+    border: 2px solid #547f00!important;
+  }
 }
