[Wen Hao] - parameterized topbar.

--- a/src/plugins/topbar/topbar.less
+++ b/src/plugins/topbar/topbar.less
@@ -51,11 +51,11 @@
     width: 45em;
   }
 
-  .environment {
-    border: 2px solid #547f00!important;
+  select {
+    border: 2px solid #547f00;
+    margin-right: 10px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal; 
   }
 
-  .project {
-    border: 2px solid #547f00!important;
-  }
 }
