--- a/src/plugins/topbar/topbar.less
+++ b/src/plugins/topbar/topbar.less
@@ -55,7 +55,8 @@
     border: 2px solid #547f00;
     margin-right: 10px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: normal; 
+    font-weight: normal;
+    min-width: 100px;
   }
 
 }
