--- a/src/plugins/topbar/topbar.less
+++ b/src/plugins/topbar/topbar.less
@@ -56,7 +56,6 @@
     margin-right: 10px;
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
-    min-width: 100px;
+    width: auto;
   }
-
 }
